fdo#79062 File having Footnote with Text Effect got corrupted after RT

When we do the export of the file, In the footnotes.xml,
 the w14 namespaces were not being added.

This issue exists for EndNotes as well.

Change-Id: I6494bbf1beaa0666743d9c1bb85a64f8bda20398
Reviewed-on: https://gerrit.libreoffice.org/9439
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>